Fix text overflow issue on posts and comments
This commit fixes an issue where text for both posts and comments were going outside of the parent div. We have a new class called text-wrap that solves this issue. Apply it to the parent div and it'll wrap all of the content within it.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -196,6 +196,9 @@ p {
     font-weight: 400;
     line-height: normal;
     margin-bottom: 10px;
+    height: auto;
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
 .post__description {
@@ -394,6 +397,12 @@ p {
 .comment__delete {
     background: none;
     border: none;
+}
+
+.text-wrap {
+    height: auto;
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
 @media (max-width: 992px) {
